# constraint-controller-library

./: CMakeLists.txt  FindBullet.cmake  FindEigen.cmake  LICENSE  README.md
models/: coach-cylinder.sh  coach-dual-arm-collision.sh  coach-dual-arm.sh  coach-lwr-cup.sh  coach-racer7-cup.sh  coach-racer7-cylinder.sh  coach-racer7-tray-convex.sh  coach-racer7-tray.sh  coach-racer7-welding.sh  coach-welding-rake.sh
models/json/: cup_grasping_collision_constraint.json  cup_grasping_constraint.json  cup_grasping_side_collision_constraint.json  cup_grasping_side_collision_constraint_lwr.json  cup_grasping_side_constraint.json  cylinder_grasping_constraint.json  plane_constraint.json
models/rlmdl/: comau-racer-7-14.mdl.xml  comau-racer-999.xml  comau-rml-dual-arm-collision.xml  comau-rml-dual-arm.xml  comau-smart5-six-10-157-left.xml  comau-smart5-six-10-157-right.xml  comau-smartsix614.mdl.xml  comau-smartsix614.xml  comau-smartsix614_ik.mdl.xml  kuka-lwr4-right.xml  universal-robots-ur5.mdl.xml
models/robots/comau-racer-7-14.convex/: link1.wrl  link3.wrl
models/robots/comau-rml/: comau-rml.wrl  link0.wrl  link1.wrl
models/robots/comau-rml-dual-arm/: comau-rml-dual-arm-collision.wrl  comau-rml-dual-arm.wrl
models/robots/comau-smart5-six-10-157/: comau-smart5-six-10-157.wrl  extras.wrl  link0.wrl  link1.wrl  link2.wrl  link3.wrl  link4.wrl  link5.wrl  link6.wrl
models/robots/comau-smart5-six-10-157.convex/: comau-smart5-six-10-157.wrl
models/robots/comau-smartsix614/: link0.wrl  link1.wrl  link2.wrl  link3.wrl  link4.wrl  link5.wrl  link6.wrl
models/robots/comau-smartsix614.boundingdecomposition/: link0.wrl  link1.wrl  link2.wrl  link3.wrl  link4.wrl  link5.wrl  link6.wrl
models/robots/kuka/: kuka-lwr4-right_wall_collision.wrl  wall.wrl
models/robots/kuka/kuka-lwr4.convex/: kuka-lwr4-right.wrl
models/scene/: LWRCup.wrl  LWRCup.xml  LWRCupCollision.wrl  LWRCupCollision.xml  cup.wrl  cylinder.wrl  cylinder_decomposed.wrl  gripper-full-closed.wrl  gripper-full.wrl  gripper-transparent.wrl  mechanicaltree.wrl  racer7-cup.convex.wrl  racer7-cup.convex.xml  racer7-cup.wrl  racer7-cup.xml  racer7-cylinder.wrl  racer7-cylinder.xml  racer7-tray-handle.convex.xml  racer7-tray-handle.wrl  racer7-tray-handle.xml  racer7-tray.convex.xml  racer7-tray.wrl  racer7-tray.xml  racer7-welding-rake.convex.wrl  racer7-welding-rake.convex.xml  racer7-welding-rake.wrl  racer7-welding-rake.xml  racer7manip.wrl  rake.wrl  reduction.wrl  robotbase.wrl  soda-can.wrl  tabletop.wrl  tool.wrl  tool_decomposed.wrl  tray-can.wrl  tray-handle.wrl  tray-transparent.wrl  tray.wrl  weiss-kms40-iso40-adapter.wrl  (+6 more)
models/scene/weiss-robotics/: kms40-iso40-adapter.wrl  kms40.wrl  wsg-fmf.wrl  wsg50-110-adapter.wrl  wsg50-110-base.wrl  wsg50-110-closed.wrl  wsg50-110-kms40-adapter.wrl  wsg50-110.wrl
src/: ConstraintParser.cpp  ConstraintParser.h  RobotControl.cpp  RobotControl.h
src/constraint/: Constraint.cpp  Constraint.h  ConstraintUtils.h  GeometricConstraints.cpp  GeometricConstraints.h  ObjectModel.cpp  ObjectModel.h  RobotConstraints.cpp  RobotConstraints.h
src/skill/: CollisionAvoidanceSkill.cpp  CollisionAvoidanceSkill.h  CompositePrioritySkill.cpp  CompositePrioritySkill.h  CompositeSkill.cpp  CompositeSkill.h  ConstraintSkill.cpp  ConstraintSkill.h
src/solver/: SolverNLOpt.cpp  SolverNLOpt.h  SolverNLOptGenericGeometric.cpp  SolverNLOptGenericGeometric.h  SolverNLOptGenericKinematic.cpp  SolverNLOptGenericKinematic.h  SolverUtils.cpp  SolverUtils.h
test/: Evaluation.cpp  Evaluation.h  JoggingGUI.cpp  JoggingGUI.h  JoggingGUI.ui  eval_robot_control.cpp  testGUI.cpp
(+4 files in other folders)
